<resources>
    <string name="app_name">EECS 4443 - Final Project - Golf</string>
    <string name="name">Name</string>
    <string name="get_started">Get Started</string>
    <string name="instructions">Instructions</string>
    <string name="tutorial_description">You will be given a tutorial of how the two input methods work - Keyboard &amp; DigitalInk - in English\n\nAfter the 2 tutorial tests, you will be given tests in other languages. Don\'t worry, you don\'t need to be multilingual\n\nResponses are not case sensitive! So don\'t worry about capitalization\n\nOnce you have completed a task, press the button in the bottom right corner to proceed\n\nGive it a press to get started!</string>
    <string name="setup_description">Fill out the details and click \"Get Started\" to begin</string>
    <string name="error_invalid_name">Please enter your full name!</string>
    <string name="error_invalid_age">Age must be in the range 18~120</string>
    <string name="setup_subtitle">EECS 4443 - Final Project</string>
    <string name="clear_button_text">Clear</string>
    <string name="clear_results_button_text">Clear Results</string>
    <string name="target_input_label">Target Input</string>
    <string name="user_input_label">Your Input</string>
    <string name="recognize">Recognize</string>
    <string name="test_results">Test Results</string>
    <string name="qr_code_description">QR Code containing CSV of test results</string>
    <string name="show_results">Show Results</string>
    <string name="welcome">Welcome</string>
    <string name="age">Age</string>
    <string name="experience">Experience</string>
    <string name="gender">Gender</string>
    <string name="loading">Loading…</string>
    <string name="missing_languages">You are missing the following languages:</string>
    <string name="tutorial">Tutorial</string>
    <string name="test">Test</string>
    <string name="incorrect_answer">Incorrect answer! Try again</string>
    <string name="continue_text">Continue</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="experience">
        <item>Novice</item>
        <item>Competent</item>
        <item>Expert</item>
    </string-array>
</resources>